添加一些 JVM 参数